--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  flutter_spinkit: ^5.2.0
   geolocator: ^10.1.0
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
